# COSC-3P98-Final-Project

./: .gitignore  3p98finalproject.cap  CMakeLists.txt  ClionCPPGoodStyleConfig_v6.xml  build_debug_emscript.sh  build_emscript.sh  commit.sh  sources.txt
include/glad/: gl.h  gles2.h  gles2_20.h
include/render/: camera.h  fbo.h  frustum.h  gl.h  renderer.h  textures.h  window.h
include/render/lighting/: deferred_renderer.h
include/render/ui/: debug.h  graphics.h  planes.h  text.h
include/shaders/: chunk.frag  chunk.vert  plane.frag  plane.vert  test.frag  test.vert  text.frag  text.vert
include/util/: math.h  settings.h
include/window/: window.h
include/world/: registry.h  world.h
include/world/chunk/: chunk.h  storage.h  typedefs.h  world.h
src/: main.cpp
src/render/: camera.cpp  fbo.cpp  gl.cpp  renderer.cpp  textures.cpp  window.cpp
src/render/lighting/: deferred_renderer.cpp
src/render/ui/: debug.cpp  graphics.cpp  text.cpp
src/util/: math.cpp  settings.cpp
src/window/: window.cpp
src/world/: registry.cpp  world.cpp
src/world/chunk/: chunk.cpp  storage.cpp  world.cpp
